--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-           version="3.0">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+
+    <listener>
+              <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+           </listener>
+       <filter>
+           <filter-name>springSecurityFilterChain</filter-name>
+          <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+      </filter>
+       <filter-mapping>
+            <filter-name>springSecurityFilterChain</filter-name>
+           <url-pattern>/*</url-pattern>
+       </filter-mapping>
+        <context-param>
+            <param-name>contextConfigLocation</param-name>
+         <param-value>WEB-INF/Spring/security.xml</param-value>
+      </context-param>
 
 
     <servlet>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>DispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/beans.xml</param-value>
+            <param-value>WEB-INF/Spring/servlet.xml</param-value>
         </init-param>
 
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
